# salary_comparison

./: .gitignore  Glasgow_Londond_Takehome_Comparison.csv  London_vs_Glasgow_Data.py  README.md  TaxBand.py  TaxBandChecker.py  disposable_income.py  main.py  pyproject.toml  salary_calculator.py  salary_heatmap.py
src/: London_vs_Glasgow_Data.py  salary_calculator.py  tax_band.py  tax_band_checker.py
test/src/: test_tax_band.py
