[tool.poetry]
name = "salary_comparison"
version = "0.1.0"
description = ""
authors = ["Colin Cheung <ColinCee@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mplcursors = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
